--- a/.github/workflows/test-rpm-build.yaml
+++ b/.github/workflows/test-rpm-build.yaml
@@ -11,6 +11,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v2
     - name: Build RPM
+      shell: 'script -q -e -c "bash {0}"'
       run: |
         /usr/bin/git describe --always --dirty
         git clone https://github.com/xcp-ng-rpms/test-rpm-build.git /tmp/test-rpm-build
